Fix blog nav active state on mobile menu and sub-pages
- Highlight blog nav link in floating menu when on /blog or any /blog/* sub-page
- Add purple colour to floating menu active link (was only bold, now visually distinct)

--- a/wp-content/themes/salefish/assets/scss/layouts/header.scss
+++ b/wp-content/themes/salefish/assets/scss/layouts/header.scss
@@ -240,6 +240,7 @@ header {
 
           &.active {
             font-family: $PSB;
+            color: $dark_purple;
           }
         }
 
